@@ -1,3 +1,16 @@
+* Run automake before libtool.  It will report an error but
+  still won't put the file into the disty.  This is wrong.
+  From Mark H Wilkinson <mhw@kremvax.demon.co.uk>
+
+* AM_CONFIG_HEADER might generate the wrong stamp file names
+  when given multiple headers.  Write a test.
+
+* Currently don't correctly handle multiple inputs to a config header.
+
+* header stamp files still in wrong dirs.
+  stamp-h.in must be in dir with h.in file
+  stamp-h must be in dir with output file
+
 * foo=bar
   if cond
   foo += joe
