@@ -26,5 +26,5 @@ mkdir d1 d2
 $AUTOMAKE || exit 1
 
 grep '^config.h:' d1/Makefile.in || exit 1
-fgrep 'echo timestamp > stamp-h' Makefile.in || exit 1
-fgrep '../d2/config.h.in' Makefile.in || exit 1
+fgrep 'echo timestamp > stamp-h' d1/Makefile.in || exit 1
+fgrep '../d2/config.h.in' d1/Makefile.in || exit 1
