@@ -1,5 +1,11 @@
 1999-01-14  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_configure): Compute $header_dir based on
+	$one_name, not $one_hdr.  Reported by Erez Zadok.  Fixes
+	confh2.test.
+	(handle_configure): Compute relative path to input header
+	correctly in all cases.
+
 	* automake.in (handle_tests): Avoid error messages from dejagnu
 	test rules.  From Karl Heuer.
 
